# sysmon-tui

./: AGENTS.md  Cargo.toml  README.md
src/: app.rs  events.rs  main.rs
src/ui/: cpu.rs  disks.rs  docker.rs  memory.rs  mod.rs  network.rs  processes.rs
